--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,8 @@
 * {
-  margin: 0;
-  padding: 0;
-  line-height: 1.5;
+    margin: 0.5em 10px;
+    padding: 0;
+    line-height: 1.5;
+    box-sizing: border-box;
 }
 
 body {
@@ -13,23 +14,37 @@ body {
     max-width: 55em;
 }
 
-p {
-  margin-bottom: 1em;
-}
-
 h1 {
-    margin-block-start: 0.83em;
-    margin-block-end: 0.83em;
     font-size: 2em;
     text-align: left;
     color: #111;
-    margin-bottom: 0.5em;
+    margin-top: 0.25em;
 }
+
+h1 a {
+    color: #111;
+    text-decoration: none;
+    margin: 0em 0em;
+}
+
+h1 a:hover {
+    color: #f4b300;
+}
+
 h2 {
     font-size: 1.5em;
     text-align: left;
     color: #222;
-    margin-bottom: 0.5em;
+}
+
+h3 {
+    text-align: left;
+    color: #222;
+    text-transform: lowercase;
+}
+
+p {
+    margin-bottom: 1em;
 }
 
 p a {
@@ -40,20 +55,9 @@ p a {
 }
 
 p a:hover {
-  border-color: #f4b300;
+    border-color: #f4b300;
 }
 
-h1 a {
-    color: #111;
-    text-decoration: none;
-}
-
-h1 a:hover {
-    color: #f4b300;
-}
-
-h3 {
-    text-align: left;
-    color: #222;
-    margin-bottom: 0.5em;
+button {
+    padding: 10px;
 }
