--- a/public/style.css
+++ b/public/style.css
@@ -117,21 +117,20 @@ li {
 }
 
 li span {
-  display: inline-block;
+  display: inline;
   padding: .5rem;
   width: 70%;
   border-radius: 4px;
   border: 2px solid transparent;
 }
 
-li span:hover {
-  background: rgba(179, 215, 255, 0.52);
+li span:before {
+  content: '\n';
+  white-space: pre;
 }
 
-li span:focus {
-  outline: 0;
-  border: 2px solid #007bff;
-  background: rgba(179, 207, 255, 0.52)
+.nestedRecipe {
+  border-bottom: 5px solid #04AA6D;
 }
 
 .recipeHeader {
@@ -139,12 +138,4 @@ li span:focus {
     text-align: left;
     color: #222;
     font-weight: bold;
-}
-
-.ingredients {
-    font-size: 1em;
-}
-
-.cookingMethod {
-
 }
