--- a/public/style.css
+++ b/public/style.css
@@ -110,16 +110,16 @@ ul {
 li {
   display: block;
   align-items: center;
-  padding: 1rem;
-  margin-bottom: 1rem;
+  padding: 0.3rem;
+  margin: 0.5rem;
   background: #f4f4f4;
   border-radius: 4px;
 }
 
 li span {
   display: inline-block;
-  padding: .5rem;
-  width: 70%;
+  padding: .3rem;
+  width: 100%;
   border-radius: 4px;
   border: 2px solid transparent;
   white-space: pre-line;
